# digit-ai-saas-forge

./: .gitignore  LICENSE  README.de.md  README.es.md  README.fr.md  README.it.md  README.md  README.pt.md
digitai-saas-forge/: .gitignore  README.md  pyproject.toml
digitai-saas-forge/backlog/: seed.md
digitai-saas-forge/conductor/: __init__.py  __main__.py  bmad_bridge.py  cadrage.py  capabilities.py  catalog.py  contracts.py  findings.py  governance.py  preflight.py  process.py  profiles.py  scaffold.py  sprint_config.py  supervisor.py  tokens.py
digitai-saas-forge/conductor/gates/: __init__.py  code_gate.py  design_gate.py  regression_gate.py
digitai-saas-forge/design/: DESIGN.md
digitai-saas-forge/tests/: test_adapter_onramp.py  test_analyzer.py  test_bad_runner.py  test_bad_runner_shim.py  test_bb_e2e.py  test_bc_e2e.py  test_bmad_bridge.py  test_bmad_planner.py  test_brownfield_e2e.py  test_builder_onramp.py  test_cadrage.py  test_catalog.py  test_claude_analyzer.py  test_claude_cli.py  test_claude_integration.py  test_code_gate.py  test_contracts.py  test_design_gate.py  test_detect.py  test_e2e_master.py  test_epics_parser.py  test_gh.py  test_gh_shim_install.py  test_gh_shim_main.py  test_gh_shim_translate.py  test_git_provider.py  test_hitl0.py  test_no_onramp.py  test_onramp.py  test_planners.py  test_preflight.py  test_process.py  test_process_env.py  test_profile_resolution.py  test_profiles.py  test_regression_gate.py  test_resolve_analyzer.py  test_resolve_bad_runner.py  test_resolve_bmad_planner.py  test_scaffold.py  (+5 more)
docs/: PRD.md  analyse.md  (+14 more)
(+64 files in other folders)
