[project]
name = "digitai-saas-forge"
version = "0.0.0"
description = "Accélérateur SaaS Digit-AI — couche d'orchestration mince (conductor) de l'idée au SaaS de production."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "pyyaml>=6.0",
]

[project.scripts]
conductor = "conductor.__main__:main"

[dependency-groups]
dev = [
    "pytest>=8.2",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["conductor"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# E/F (pyflakes+pycodestyle), I (isort), UP (pyupgrade), B (bugbear), SIM (simplify)
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["conductor", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
